Update and rename dextro.html to chatbot.html

--- a/chatbot.html
+++ b/chatbot.html
@@ -15,20 +15,20 @@
           <img class="menu-icon" src="icons/menu-icon.svg">
         </div>
         <div class="dextro">
-          dextro
+          Dextro
         </div>
       </div>
       <div class="right-header">
         
+          <img class="queston-mark-icon" src="icons/question-mark.jpg" style="border-radius: 25px;">
           <img class="menu-icon" src="icons/apps-icon.png">
-          <img class="queston-mark-icon" src="icons/question-mark.jpg">
         
       </div>
     </header>
     <div class="chat-body">
       <div class="left-body">
-        <div>
-          Hi there,
+        <div class="intro">
+          Hi there, I'm dextro. I can help you with anything you need concerning school, feel free to ask me anything, anytime.
         </div>
       </div>
       <div class="right-body">
