--- a/login.html
+++ b/login.html
@@ -13,11 +13,11 @@
   
   <div class="login-box">
     <form action="">
-      <h2>Login to <span style="
+      <h2>Login to <a href="chatbot.html" style="text-decoration: none;"><span style="
         color: darkblue;
         font-size: larger;
         font-weight: 900;
-        ">Dextro</span></h2>
+        ">Dextro</span></a></h2>
 
       <div class="input-box">
         <span class="icon">
@@ -40,10 +40,10 @@
         <a href="#">Forgot Password?</a>
       </div>
 
-      <button type="submit">Login</button>
+      <a href="chatbot.html"><button type="submit">Login</button></a>
 
       <div class="register-link">
-        <p>Don't have an account? <a href="#">Register</a></p>
+        <p>Don't have an account? <a href="register.html">Sign Up</a></p>
       </div>
     </form>
   </div>
@@ -51,6 +51,6 @@
 </div>
 <!-- partial -->
   <script src='https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js'></script>
-<script src='https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js'></script>
+
 </body>
 </html>
