--- a/register.html
+++ b/register.html
@@ -13,11 +13,11 @@
   
   <div class="login-box">
     <form action="">
-      <h2>Sign Up to <span style="
+      <h2>Sign Up to <a href="chatbot.html" style="text-decoration: none;"><span style="
         color: darkblue;
         font-size: larger;
         font-weight: 900;
-        ">Dextro</span></h2>
+        ">Dextro</span></a></h2>
 
       <div class="input-box">
         <span class="icon">
